...
            <View style={styles.contentContainer}>
              <Text style={[text.longFormH1, styles.longFormH1]}>
                {I18n.t('text_passwort_reset_title_info')}
              </Text>
              <View style={form.formSegment1}>
                <TextInput
                  testID="e2e-reset-username"
                  value={this.state.usernameOrEmail}
                  error={usernameError}
                  onChangeText={this.onUsernameOrEmailChange}
                  placeholder={I18n.t('text_placeholder_your_username_or_email')}
                  keyboardType={'email-address'}
                  returnKeyType="go"
...
                  //  autoCorrect={false}
                  onSubmitEditing={this.onSubmit}
                />
              </View>
              <View style={form.lastFormSegment}>
                <TextButton
                  testID="e2e-reset-submit"
                  style={[button.primary, button.fullWidth, styles.resetButton]}
                  textStyle={button.primaryText}
                  onPress={this.onSubmit}
                  isLoading={isLoading}>
                    {I18n.t('text_passwort_reset_submit').toUpperCase()}
                </TextButton>
...
