...
                  style={[button.secondary]}
                  textStyle={button.secondaryText}
                  onPress={() => this.props.isConnected ? this.props.navigation.navigate(QRScanner) : this.showNetworkAlert()}>
                  {I18n.t('caption_qr_scanner').toUpperCase()}
                </TextButton>
                <TextButton
                  testID="e2e-first-contact-login"
                  style={[button.secondary]}
                  textStyle={button.secondaryText}
                  onPress={() => this.props.isConnected ? this.props.navigation.navigate(LoginFromSplash) : this.showNetworkAlert()}>
                  {I18n.t('text_login').toUpperCase()}
                </TextButton>
              </View>
...
