...
                  textStyle={button.primaryText}
                  onPress={this.onSubmit}
                  isLoading={isLoading}>
                {I18n.t('caption_login').toUpperCase()}
              </TextButton>
              <ErrorBalloon message={error} error={rawError} />
              <TouchableOpacity testID="e2e-login-forgot-password" style={[text.mediumText, styles.forgotPasswordLink]} onPress={() => this.props.navigation.navigate(PasswordReset)}>
                <Text style={[text.mediumText]}>
                  {I18n.t('caption_forgot_password')} {'›'}
                </Text>
              </TouchableOpacity>
              <EulaLink mode="LOGIN" />
            </View>
...
